--- a/assets/stylesheets/base.css
+++ b/assets/stylesheets/base.css
@@ -19,7 +19,8 @@ body {
   font-family: system, -apple-system, BlinkMacSystemFont, Avenir, sans-serif;
   font-size: 1.1rem;
   line-height: 1.4;
-  margin: 0;
+  margin: 0 auto;
+  max-width: 1200px;
 }
 
 input {
@@ -34,4 +35,18 @@ input:focus {
   border-color: #479DD2;
   box-shadow: 0 0 2px #479DD2;
   outline: 0;
+}
+
+.main {
+  margin-bottom: 2rem;
+}
+
+.footer {
+  background: #333;
+  color: rgba(255,255,255, .6);
+  padding: 1rem;
+}
+
+.copyright {
+  display: inline-block;
 }
