--- a/assets/stylesheets/cards.css
+++ b/assets/stylesheets/cards.css
@@ -2,3 +2,41 @@
 ----------------------------------
 Card Styles
 ---------------------------------- */
+
+.cards {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  margin: 0;
+  padding: 1rem;
+}
+
+.card {
+  border-radius: 3px;
+  margin-bottom: 1rem;
+  min-height: 100px;
+  padding: 1rem;
+  text-align: center;
+}
+
+.card--coral {
+  background-color: coral;
+}
+
+@media (min-width: 650px) {
+  .cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .card {
+    flex: 1 1 24%;
+    margin-right: .5rem;
+  }
+}
+
+@media (min-width: 1025px) {
+  .card {
+    flex: 1 1 15%;
+  }
+}
