--- a/assets/stylesheets/header.css
+++ b/assets/stylesheets/header.css
@@ -2,3 +2,99 @@
 ----------------------------------
 Header Styles
 ---------------------------------- */
+
+.logo {
+  display: block;
+  margin: 1rem auto;
+  width: 40px;
+}
+
+.logo svg {
+  fill: coral;
+}
+
+.navigation {
+  background-color: #DDD;
+  padding: .5rem 1rem;
+}
+
+.navigation ul {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  margin: 0;
+  padding: 0;;
+}
+
+.navigation li {
+  padding-right: .5rem;
+}
+
+.navigation a {
+  color: #1560FB;
+  text-decoration: none;
+  transition: color .2s ease;
+}
+
+.navigation a:hover,
+.navigation a:focus {
+  color: coral;
+}
+
+.navigation a:focus {
+  border: 1px dotted;
+  outline: 0;
+}
+
+.hidden {
+  left: -9999px;
+  position: absolute;
+  top: -9999px;
+}
+
+.search-form {
+  background-color: #EFEFEF;
+  padding: .5rem 1rem;
+}
+
+.search {
+  width: 100%;
+}
+
+@media (min-width: 650px) {
+  .logo {
+    margin: 1rem;
+  }
+
+  .nav-search-wrapper {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .navigation {
+    align-items: center;
+    display: flex;
+  }
+
+  .navigation,
+  .search-form {
+    background-color: transparent;
+  }
+}
+
+@media (min-width: 1025px) {
+  .header {
+    border-bottom: 1px solid #EEE;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .search-form {
+    align-items: center;
+    display: flex;
+  }
+
+  .nav-search-wrapper {
+    flex: 1;
+  }
+}
