tim-smith-workshop

--- a/assets/stylesheets/cards.css
+++ b/assets/stylesheets/cards.css
@@ -1,4 +1,39 @@
-/*
-----------------------------------
-Card Styles
----------------------------------- */
+.cards{
+  display: flex;
+  list-style: none;
+  flex-direction: column;
+  margin: 0;
+  padding: 1rem;
+}
+
+.card{
+  padding: 1rem;
+  text-align: center;
+  border-radius: 3px;
+  min-height: 100px;
+  margin-bottom: 1rem;
+}
+
+.card--coral{
+  background-color: coral;
+
+}
+
+@media(min-width: 650px){
+
+  .cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  .card{
+    margin-right:.5rem;
+    flex: 1 1 24%;
+  }
+}
+
+@media(min-width: 1025px){
+  .card{
+    flex: 1 1 15%;
+  }
+}
